--- a/CHANGES.yaml
+++ b/CHANGES.yaml
@@ -1,4 +1,7 @@
 ---
+- version: 0.2
+  date:    Fri Mar 19 16:00:07 PDT 2010
+  changes: Used a MANIFEST.in
 - version: 0.1
   date:    Fri Mar 19 14:42:01 PDT 2010
   changes: Initial version
