--- a/CHANGES.yaml
+++ b/CHANGES.yaml
@@ -1,4 +1,16 @@
 ---
+- version: 0.6
+  date:    Fri Mar 26 22:15:08 PDT 2010
+  changes:
+  - Changes config field 'import' to 'modules'
+---
+- version: 0.5
+  date:    Wed Mar 24 20:36:04 PDT 2010
+  changes:
+  - Refactored following the advice of Gary Bernhardt. Thanks!
+  - Added initial tests.
+  - Tests are runnable from setup.py.
+---
 - version: 0.4
   date:    Sat Mar 20 16:26:36 PDT 2010
   changes:
