--- a/CHANGES.yaml
+++ b/CHANGES.yaml
@@ -1,4 +1,9 @@
 ---
+- version: 0.9
+  date:    Tue Mar 30 14:50:48 PDT 2010
+  changes:
+  - Delete extraneous stuff from globals()
+---
 - version: 0.8
   date:    Mon Mar 29 19:58:31 PDT 2010
   changes:
