--- a/package/info.yaml
+++ b/package/info.yaml
@@ -18,7 +18,7 @@ classifiers:
 description: Python Interactive Playground
 long_description_from: README.rst
 url: http://github.com/ingydotnet/pyplay-py/
-packages_from:
+py_modules:
 - pyplay
 scripts:
 - bin/pyplay
